cleanup DCAI: remove excessive synchronized
GitOrigin-RevId: 637eb5f7540d72c8cdcfd03cf9853b4ac251dbb2